Made implicit references explicit, fixed many test cases, reduced dependencies
UMLchange profile seems to be broken

git-svn-id: https://svn.uni-koblenz.de/rgse/carisma/trunk@9389 b99f87ec-93df-11e5-8f70-1b308f1eeebc